src/objects/Object_Merge_Handler__c.object
<CustomObject>
    <description>Represents an object to be merged.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, this merge handler will be used during the Object merge process.</description>
        <inlineHelpText>If checked, this merge handler will be used during the Object merge process.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_Reparented_Victim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a victim record that would normally be reparented would instead be cloned. This is useful for master-detail relationships that don&apos;t allow reparenting.</description>
        <inlineHelpText>If checked, a victim record that would normally be reparented would instead be cloned. This is useful for master-detail relationships that don&apos;t allow reparenting.</inlineHelpText>
        <label>Clone Reparented Victim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_Action__c</fullName>
        <description>How the merge will be performed.</description>
        <inlineHelpText>How the merge will be performed.</inlineHelpText>
        <label>Merge Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Keep Oldest Created</fullName>
                </value>
                <value>
                    <fullName>Keep Newest Created</fullName>
                </value>
                <value>
                    <fullName>Keep Last Modified</fullName>
                </value>
                <value>
                    <fullName>Delete Duplicate</fullName>
                </value>
                <value>
                    <fullName>Keep Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Lookup_Field_API_Name__c</fullName>
        <description>API name of the field on the related object that looks up to Object.</description>
        <inlineHelpText>API name of the field on the related object that looks up to Object.</inlineHelpText>
        <label>Object Lookup Field API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_of_Execution__c</fullName>
        <description>Order in which this handler is executed.</description>
        <inlineHelpText>Order in which this handler is executed.</inlineHelpText>
        <label>Order of Execution</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Handler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Handler for the parent object.</description>
        <inlineHelpText>Handler for the parent object.</inlineHelpText>
        <label>Parent Handler</label>
        <referenceTo>Object_Merge_Handler__c</referenceTo>
        <relationshipLabel>Object Merge Handlers</relationshipLabel>
        <relationshipName>Object_Merge_Handlers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Action__c</fullName>
        <description>Action to be performed on the victim record when a duplicate is not found.</description>
        <inlineHelpText>Action to be performed on the victim record when a duplicate is not found.</inlineHelpText>
        <label>Standard Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move Victim</fullName>
                </value>
                <value>
                    <fullName>Clone Victim</fullName>
                </value>
                <value>
                    <fullName>Delete Victim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Object Merge Handler</label>
    <listViews>
        <fullName>Active_Merge_Handlers</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Order_of_Execution__c</columns>
        <columns>Standard_Action__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Merge Handlers</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Parent_Handler__c</columns>
        <columns>Object_Lookup_Field_API_Name__c</columns>
        <columns>Standard_Action__c</columns>
        <columns>Merge_Action__c</columns>
        <columns>Clone_Reparented_Victim__c</columns>
        <columns>Order_of_Execution__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Child_Handlers</fullName>
        <columns>Parent_Handler__c</columns>
        <columns>NAME</columns>
        <columns>Object_Lookup_Field_API_Name__c</columns>
        <columns>Standard_Action__c</columns>
        <columns>Merge_Action__c</columns>
        <columns>Clone_Reparented_Victim__c</columns>
        <columns>Order_of_Execution__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Object_Merge_Handler__c.Child_Handler</value>
        </filters>
        <label>Child Handlers</label>
    </listViews>
    <listViews>
        <fullName>Parent_Handlers</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Object_Merge_Handler__c.Parent_Handler</value>
        </filters>
        <label>Parent Handlers</label>
    </listViews>
    <nameField>
        <label>Object API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Merge Handlers</pluralLabel>
    <recordTypes>
        <fullName>Child_Handler</fullName>
        <active>true</active>
        <description>Handler for a child object.</description>
        <label>Child Handler</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Handler</fullName>
        <active>true</active>
        <description>Handler for a parent object.</description>
        <label>Parent Handler</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_Handler_Populated</fullName>
        <active>true</active>
        <description>Ensures the Parent Handler field is populated on active Child Object Merge Handlers.</description>
        <errorConditionFormula>Active__c &amp;&amp; RecordType.DeveloperName == &quot;Child_Handler&quot; &amp;&amp; ISBLANK(Parent_Handler__c)</errorConditionFormula>
        <errorDisplayField>Parent_Handler__c</errorDisplayField>
        <errorMessage>The Parent Handler field must be populated on active Child Object Merge Handlers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Standard_Action_Populated</fullName>
        <active>true</active>
        <description>Ensures the Standard Action field is populated on active Child Object Merge Handlers.</description>
        <errorConditionFormula>Active__c &amp;&amp; RecordType.DeveloperName == &quot;Child_Handler&quot; &amp;&amp; ISBLANK(TEXT(Standard_Action__c))</errorConditionFormula>
        <errorDisplayField>Standard_Action__c</errorDisplayField>
        <errorMessage>The Standard Action field must be populated on active Child Object Merge Handlers.</errorMessage>
    </validationRules>
</CustomObject>